--- a/_posts/2024-01-17-new-year.md
+++ b/_posts/2024-01-17-new-year.md
@@ -7,7 +7,7 @@ tags: [note]
 
 Last year was a time of exploration and expansion for Saint Silva. What started as an experiment in musical minimalism and field recording became a full ambient, electronic playground. My only goal with Saint Silva last year was to play more music, and specifically, to play this music live. 
 
-The kind of music I often create typically falls under the non-genre that is "ambient". Like many genres, it's hard to define and describe. I'm not concerned with these descriptors if they are helpful to people. Within this field, I always wondered what it looks like to create a compelling live performance playing this kind of music. The image in my head of this kind of show is a guy hunched over a laptop, or a modular system with cables sprawling every which way. This feels unsatisfying.
+The kind of music I often create typically falls under the non-genre that is "ambient". Like many genres, it's hard to define and describe. I'm not overly concerned with these descriptors if they are helpful to people. Within this field, I am constantly questioning what it looks like to create a compelling live performance playing this kind of music. The image in my head of this kind of show is a guy sitting at a table hunched over a laptop, or a modular system with cables sprawling every which way. I am really interested in the technical aspects of what happen shere, but the visual performance usually feels unsatisfying.
 
 I'm still searching for that ideal blend of performance and composition with Saint Silva. I have played musical responses to paintings, mood music for markets, and in the corner of local record stores. I learned a lot from performing electronic music live. I learned what I enjoy doing, and what gives me anxiety.
 
